chore: implement architect review recommendations, harden quant logic, and optimize system performance